@@ -3,6 +3,18 @@ News
 
 .. contents::
 
+svn trunk
+---------
+
+* Changed how ``charset`` is determined on :class:`webob.Request`
+  objects.  Now the ``charset`` parameter is read on the Content-Type
+  header, if it is present.  Otherwise a ``default_charset`` parameter
+  is read, or the ``charset`` argument to the Request constructor.
+  This is more similar to how :class:`webob.Response` handles the
+  charset.  **Backward-incompatible change:** if you set the class
+  attribute ``charset`` to indicate the default charset, that must be
+  changed to ``default_charset``.
+
 0.9.6.1
 -------
 
